--- a/index.html
+++ b/index.html
@@ -94,7 +94,56 @@
 
 <div class="container">
   <h1>Work Sheet</h1>
-  <!-- FORM OMITTED FOR BREVITY -->
+  <label for="coNumber">CO-NUMBER</label>
+  <input type="text" id="coNumber" placeholder="e.g. CO-1023" />
+  <label for="operator">Operator Name</label>
+  <input type="text" id="operator" placeholder="Full name" />
+  <label for="shift">Shift</label>
+  <select id="shift">
+    <option value="Morning">Morning</option>
+    <option value="Afternoon">Afternoon</option>
+    <option value="Night">Night</option>
+  </select>
+  <h3 style="color:#ccc;">Cross Wire</h3>
+  <label for="crossSize">Size (in)</label>
+  <input type="text" id="crossSize" placeholder="e.g. 2.5" />
+  <label for="crossDiameter">Diameter (in)</label>
+  <input type="text" id="crossDiameter" placeholder="e.g. 0.25" />
+  <label for="crossRequired">Required Quantity</label>
+  <input type="number" id="crossRequired" />
+  <label for="crossCut">Cut Quantity</label>
+  <input type="number" id="crossCut" />
+  <label for="crossStart">Start Time</label>
+  <input type="time" id="crossStart" />
+  <label for="crossEnd">End Time</label>
+  <input type="time" id="crossEnd" />
+  <label for="crossMachine">Machine</label>
+  <select id="crossMachine">
+    <option value="1">Machine 1</option>
+    <option value="2">Machine 2</option>
+    <option value="3">Machine 3</option>
+  </select>
+  <h3 style="color:#ccc;">Long Wire</h3>
+  <label for="longSize">Size (in)</label>
+  <input type="text" id="longSize" placeholder="e.g. 4.0" />
+  <label for="longDiameter">Diameter (in)</label>
+  <input type="text" id="longDiameter" placeholder="e.g. 0.25" />
+  <label for="longRequired">Required Quantity</label>
+  <input type="number" id="longRequired" />
+  <label for="longCut">Cut Quantity</label>
+  <input type="number" id="longCut" />
+  <label for="longStart">Start Time</label>
+  <input type="time" id="longStart" />
+  <label for="longEnd">End Time</label>
+  <input type="time" id="longEnd" />
+  <label for="longMachine">Machine</label>
+  <select id="longMachine">
+    <option value="1">Machine 1</option>
+    <option value="2">Machine 2</option>
+    <option value="3">Machine 3</option>
+  </select>
+  <label for="notes">Notes</label>
+  <textarea id="notes" rows="4" placeholder="Observations or other details..."></textarea>
   <button onclick="saveWorkSheet()">Save Work Sheet</button>
   <button onclick="loadHistory()">View History</button>
   <button id="logout" onclick="logout()">Logout</button>
