--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
     .container {
       width: 100%;
-      max-width: 500px;
+      max-width: 700px;
       background: rgba(43, 43, 43, 0.95);
       border: 1px solid #444;
       border-radius: 10px;
@@ -78,10 +78,27 @@
     #logout {
       background: #a00;
     }
+    #historyTable {
+      width: 100%;
+      margin-top: 1rem;
+      border-collapse: collapse;
+    }
+    #historyTable th, #historyTable td {
+      border: 1px solid #666;
+      padding: 0.5rem;
+      text-align: center;
+    }
+    #historyTable th {
+      background: #333;
+      color: #eee;
+    }
+    #historyTable td button {
+      padding: 0.25rem 0.5rem;
+      font-size: 0.9rem;
+    }
   </style>
 </head>
 <body>
-
 <div id="login-container">
   <h2>Login</h2>
   <label for="email">Email</label>
@@ -106,9 +123,9 @@
   </select>
   <h3 style="color:#ccc;">Cross Wire</h3>
   <label for="crossSize">Size (in)</label>
-  <input type="text" id="crossSize" placeholder="e.g. 2.5" />
+  <input type="text" id="crossSize" />
   <label for="crossDiameter">Diameter (in)</label>
-  <input type="text" id="crossDiameter" placeholder="e.g. 0.25" />
+  <input type="text" id="crossDiameter" />
   <label for="crossRequired">Required Quantity</label>
   <input type="number" id="crossRequired" />
   <label for="crossCut">Cut Quantity</label>
@@ -125,9 +142,9 @@
   </select>
   <h3 style="color:#ccc;">Long Wire</h3>
   <label for="longSize">Size (in)</label>
-  <input type="text" id="longSize" placeholder="e.g. 4.0" />
+  <input type="text" id="longSize" />
   <label for="longDiameter">Diameter (in)</label>
-  <input type="text" id="longDiameter" placeholder="e.g. 0.25" />
+  <input type="text" id="longDiameter" />
   <label for="longRequired">Required Quantity</label>
   <input type="number" id="longRequired" />
   <label for="longCut">Cut Quantity</label>
@@ -143,17 +160,18 @@
     <option value="3">Machine 3</option>
   </select>
   <label for="notes">Notes</label>
-  <textarea id="notes" rows="4" placeholder="Observations or other details..."></textarea>
+  <textarea id="notes" rows="4"></textarea>
   <button onclick="saveWorkSheet()">Save Work Sheet</button>
   <button onclick="loadHistory()">View History</button>
   <button id="logout" onclick="logout()">Logout</button>
+  <table id="historyTable"></table>
   <div class="footer">© 2025 WireTrack Systems</div>
 </div>
 
 <script type="module">
   import { initializeApp } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js";
   import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-auth.js";
-  import { getFirestore, collection, setDoc, doc, getDocs } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
+  import { getFirestore, collection, setDoc, doc, getDocs, getDoc } from "https://www.gstatic.com/firebasejs/12.0.0/firebase-firestore.js";
 
   const firebaseConfig = {
     apiKey: "AIzaSyArL-sDIt0bQuHIDZIDpODjtV8bziQnEDo",
@@ -226,7 +244,6 @@
       createdAt: new Date().toISOString(),
       user: auth.currentUser ? auth.currentUser.email : "unknown"
     };
-
     try {
       await setDoc(doc(db, "worksheets", id), sheet);
       alert("✅ Work sheet saved successfully");
@@ -237,44 +254,53 @@
   };
 
   window.loadHistory = async function () {
+    const table = document.getElementById("historyTable");
+    table.innerHTML = "<tr><th>CO-NUMBER</th><th>Operator</th><th>Date</th><th>Action</th></tr>";
     try {
       const querySnapshot = await getDocs(collection(db, "worksheets"));
-      let output = '📋 HISTORY:\n';
       querySnapshot.forEach((docSnap) => {
         const d = docSnap.data();
-        output += `- ${d.coNumber} | ${d.operator} | ${d.createdAt}\n`;
+        const row = table.insertRow(-1);
+        row.insertCell(0).innerText = d.coNumber;
+        row.insertCell(1).innerText = d.operator;
+        row.insertCell(2).innerText = new Date(d.createdAt).toLocaleString();
+        const btn = document.createElement("button");
+        btn.innerText = "Open";
+        btn.onclick = () => loadWorkSheet(d.coNumber);
+        const actionCell = row.insertCell(3);
+        actionCell.appendChild(btn);
       });
-      const coNumberToLoad = prompt(output + "\nEnter CO-NUMBER to load:");
-      if (coNumberToLoad) {
-        const docRef = doc(db, "worksheets", coNumberToLoad);
-        const docSnap = await getDoc(docRef);
-        if (docSnap.exists()) {
-          const d = docSnap.data();
-          document.getElementById('coNumber').value = d.coNumber;
-          document.getElementById('operator').value = d.operator;
-          document.getElementById('shift').value = d.shift;
-          document.getElementById('crossSize').value = d.cross.size;
-          document.getElementById('crossDiameter').value = d.cross.diameter;
-          document.getElementById('crossRequired').value = d.cross.required;
-          document.getElementById('crossCut').value = d.cross.cut;
-          document.getElementById('crossStart').value = d.cross.start;
-          document.getElementById('crossEnd').value = d.cross.end;
-          document.getElementById('crossMachine').value = d.cross.machine;
-          document.getElementById('longSize').value = d.long.size;
-          document.getElementById('longDiameter').value = d.long.diameter;
-          document.getElementById('longRequired').value = d.long.required;
-          document.getElementById('longCut').value = d.long.cut;
-          document.getElementById('longStart').value = d.long.start;
-          document.getElementById('longEnd').value = d.long.end;
-          document.getElementById('longMachine').value = d.long.machine;
-          document.getElementById('notes').value = d.notes;
-        } else {
-          alert("❌ CO-NUMBER not found");
-        }
-      }
     } catch (error) {
       alert("Error loading history");
       console.error(error);
+    }
+  };
+
+  window.loadWorkSheet = async function (id) {
+    const docRef = doc(db, "worksheets", id);
+    const docSnap = await getDoc(docRef);
+    if (docSnap.exists()) {
+      const d = docSnap.data();
+      document.getElementById('coNumber').value = d.coNumber;
+      document.getElementById('operator').value = d.operator;
+      document.getElementById('shift').value = d.shift;
+      document.getElementById('crossSize').value = d.cross.size;
+      document.getElementById('crossDiameter').value = d.cross.diameter;
+      document.getElementById('crossRequired').value = d.cross.required;
+      document.getElementById('crossCut').value = d.cross.cut;
+      document.getElementById('crossStart').value = d.cross.start;
+      document.getElementById('crossEnd').value = d.cross.end;
+      document.getElementById('crossMachine').value = d.cross.machine;
+      document.getElementById('longSize').value = d.long.size;
+      document.getElementById('longDiameter').value = d.long.diameter;
+      document.getElementById('longRequired').value = d.long.required;
+      document.getElementById('longCut').value = d.long.cut;
+      document.getElementById('longStart').value = d.long.start;
+      document.getElementById('longEnd').value = d.long.end;
+      document.getElementById('longMachine').value = d.long.machine;
+      document.getElementById('notes').value = d.notes;
+    } else {
+      alert("❌ CO-NUMBER not found");
     }
   };
 </script>
